entity and repo setup done

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -34,10 +34,24 @@
                         <li><a href="/" class="nav-link active">Home</a></li>
                         <li><a href="/about">About</a></li>
                         <li class="has-children">
-                            <a href="/joblistings">Job Listings</a>
+                            <a href="#" id="dropdownMenuButton">Job Listings</a>
                             <ul class="dropdown">
-                                <li><a href="/jobsingle">Job Single</a></li>
-                                <li><a href="/postjob">Post a Job</a></li>
+                                <!--start-->
+
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li>
+                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <ul class="dropdown-submenu">
+                                            <li>
+                                                <a class="dropdown-item" href="#">Multi level 1</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="#">Multi level 2</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+
+                                <!--end-->
                             </ul>
                         </li>
                         <li class="has-children">
